# bao

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  basedpyrightconfig.json  core_agent_lines.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  skills-lock.json
.github/workflows/: desktop-ci-lite.yml  desktop-release.yml  desktop-update-feed.yml  pypi-publish.yml
app/: README.md  _main_focus.py  _main_icons.py  _main_paths.py  _main_runtime.py  _main_runtime_process.py  _main_runtime_qml.py  _main_runtime_window.py  _main_runtime_wiring.py  _main_single_instance.py  _main_tray.py  _main_utils.py  main.py
app/backend/: _chat_message_load.py  _chat_message_prepare.py  _config_common.py  _config_save.py  _cron_actions.py  _cron_common.py  _cron_model.py  (+94 more)
assets/: _build_svg_arch.py  _build_svg_features.py  _build_svg_hero.py  _build_svg_shared.py  build_svg.py  logo.icns
bao/: __init__.py  __main__.py  profile.py  runtime_diagnostics.py
bridge/: package-lock.json  package.json
container/: Dockerfile  build.sh
docs/: DEBUG_CHECKLIST.md  REQUIREMENTS.md  SECURITY.md  SPEC.md  desktop-packaging.md
install/: install.ps1  install.sh
launchd/: com.bao.plist
scripts/: audit_engineering_metrics.py  core_agent_lines.sh  dev_run.sh  test_desktop_ui_smoke.sh  test_high_risk.sh  test_smoke.sh  test_targeted.sh  update_desktop_ui_baselines.sh
src/: config.ts  container-runner.test.ts  container-runner.ts  db.ts  group-queue.test.ts  index.ts  ipc.ts  mount-security.ts  router.ts  types.ts  whatsapp-auth.ts
tests/: _chat_model_testkit.py  _chat_service_cases_01.py  _chat_service_cases_02.py  _chat_service_cases_05.py  _chat_service_cases_06.py  _chat_service_cases_07.py  _chat_service_cases_08.py  _chat_service_cases_09.py  _chat_service_cases_10.py  _chat_service_cases_11.py  _chat_service_cases_12.py  _chat_service_cases_13.py  _chat_service_testkit.py  _chat_view_integration_config.py  _chat_view_integration_cron.py  _chat_view_integration_diagnostics.py  _chat_view_integration_helpers_a.py  _chat_view_integration_helpers_b.py  _chat_view_integration_profile_update.py  _chat_view_integration_session.py  _chat_view_integration_shared.py  _chat_view_integration_testkit.py  _config_service_testkit.py  _control_tower_workspace_qml_fragments.py  _control_tower_workspace_qml_testkit.py  _cron_bridge_testkit.py  _desktop_build_scripts_testkit.py  _desktop_focus_dismiss_qml.py  _desktop_focus_dismiss_shared.py  _desktop_ui_testkit_base.py  _desktop_ui_testkit_baseline.py  _desktop_ui_testkit_scene.py  _message_bubble_testkit.py  _profile_service_testkit.py  _profile_supervisor_service_harness.py  _profile_supervisor_service_snapshot.py  _profile_supervisor_service_testkit.py  _session_service_cases_01.py  _session_service_cases_02.py  _session_service_cases_03.py  (+195 more)
(+386 files in other folders)
